# storage/api-docs/api-docs.json
@@ -308,11 +308,65 @@
         "/api/tags": {
             "get": {
                 "tags": [
-                    "Skins"
+                    "Tags"
                 ],
-                "summary": "Скины",
-                "description": "Скины",
+                "summary": "Теги",
+                "description": "Теги",
                 "operationId": "App\\Http\\Controllers\\API\\TagsController::index",
+                "responses": {
+                    "200": {
+                        "description": "Ok",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Tag"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "bearer": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Tags"
+                ],
+                "summary": "Создание тега",
+                "description": "Создание тега",
+                "operationId": "App\\Http\\Controllers\\API\\TagsController::store",
+                "requestBody": {
+                    "description": "Pass user credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "description": "Название",
+                                        "type": "string"
+                                    },
+                                    "color": {
+                                        "description": "Цвет",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
                 "responses": {
                     "200": {
                         "description": "Ok",
